--- a/partial_stats_ui.html
+++ b/partial_stats_ui.html
@@ -1541,6 +1541,73 @@ oeaxhkcmh8kiU1hGtfYfNOdn6/Vy8DXq4bztWwa8Lz844D040u2FdFUUY76R9X6v+i3Op6AW8kv2
 	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="219.792" y1="84.794" x2="204.792" y2="84.794"/>
 </g>
 <g id="Defense_Icon">
+	<image overflow="visible" enable-background="new    " width="64" height="64" xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAK
+T2lDQ1BQaG90b3Nob3AgSUNDIHByb2ZpbGUAAHjanVNnVFPpFj333vRCS4iAlEtvUhUIIFJCi4AU
+kSYqIQkQSoghodkVUcERRUUEG8igiAOOjoCMFVEsDIoK2AfkIaKOg6OIisr74Xuja9a89+bN/rXX
+Pues852zzwfACAyWSDNRNYAMqUIeEeCDx8TG4eQuQIEKJHAAEAizZCFz/SMBAPh+PDwrIsAHvgAB
+eNMLCADATZvAMByH/w/qQplcAYCEAcB0kThLCIAUAEB6jkKmAEBGAYCdmCZTAKAEAGDLY2LjAFAt
+AGAnf+bTAICd+Jl7AQBblCEVAaCRACATZYhEAGg7AKzPVopFAFgwABRmS8Q5ANgtADBJV2ZIALC3
+AMDOEAuyAAgMADBRiIUpAAR7AGDIIyN4AISZABRG8lc88SuuEOcqAAB4mbI8uSQ5RYFbCC1xB1dX
+Lh4ozkkXKxQ2YQJhmkAuwnmZGTKBNA/g88wAAKCRFRHgg/P9eM4Ors7ONo62Dl8t6r8G/yJiYuP+
+5c+rcEAAAOF0ftH+LC+zGoA7BoBt/qIl7gRoXgugdfeLZrIPQLUAoOnaV/Nw+H48PEWhkLnZ2eXk
+5NhKxEJbYcpXff5nwl/AV/1s+X48/Pf14L7iJIEyXYFHBPjgwsz0TKUcz5IJhGLc5o9H/LcL//wd
+0yLESWK5WCoU41EScY5EmozzMqUiiUKSKcUl0v9k4t8s+wM+3zUAsGo+AXuRLahdYwP2SycQWHTA
+4vcAAPK7b8HUKAgDgGiD4c93/+8//UegJQCAZkmScQAAXkQkLlTKsz/HCAAARKCBKrBBG/TBGCzA
+BhzBBdzBC/xgNoRCJMTCQhBCCmSAHHJgKayCQiiGzbAdKmAv1EAdNMBRaIaTcA4uwlW4Dj1wD/ph
+CJ7BKLyBCQRByAgTYSHaiAFiilgjjggXmYX4IcFIBBKLJCDJiBRRIkuRNUgxUopUIFVIHfI9cgI5
+h1xGupE7yAAygvyGvEcxlIGyUT3UDLVDuag3GoRGogvQZHQxmo8WoJvQcrQaPYw2oefQq2gP2o8+
+Q8cwwOgYBzPEbDAuxsNCsTgsCZNjy7EirAyrxhqwVqwDu4n1Y8+xdwQSgUXACTYEd0IgYR5BSFhM
+WE7YSKggHCQ0EdoJNwkDhFHCJyKTqEu0JroR+cQYYjIxh1hILCPWEo8TLxB7iEPENyQSiUMyJ7mQ
+AkmxpFTSEtJG0m5SI+ksqZs0SBojk8naZGuyBzmULCAryIXkneTD5DPkG+Qh8lsKnWJAcaT4U+Io
+UspqShnlEOU05QZlmDJBVaOaUt2ooVQRNY9aQq2htlKvUYeoEzR1mjnNgxZJS6WtopXTGmgXaPdp
+r+h0uhHdlR5Ol9BX0svpR+iX6AP0dwwNhhWDx4hnKBmbGAcYZxl3GK+YTKYZ04sZx1QwNzHrmOeZ
+D5lvVVgqtip8FZHKCpVKlSaVGyovVKmqpqreqgtV81XLVI+pXlN9rkZVM1PjqQnUlqtVqp1Q61Mb
+U2epO6iHqmeob1Q/pH5Z/YkGWcNMw09DpFGgsV/jvMYgC2MZs3gsIWsNq4Z1gTXEJrHN2Xx2KruY
+/R27iz2qqaE5QzNKM1ezUvOUZj8H45hx+Jx0TgnnKKeX836K3hTvKeIpG6Y0TLkxZVxrqpaXllir
+SKtRq0frvTau7aedpr1Fu1n7gQ5Bx0onXCdHZ4/OBZ3nU9lT3acKpxZNPTr1ri6qa6UbobtEd79u
+p+6Ynr5egJ5Mb6feeb3n+hx9L/1U/W36p/VHDFgGswwkBtsMzhg8xTVxbzwdL8fb8VFDXcNAQ6Vh
+lWGX4YSRudE8o9VGjUYPjGnGXOMk423GbcajJgYmISZLTepN7ppSTbmmKaY7TDtMx83MzaLN1pk1
+mz0x1zLnm+eb15vft2BaeFostqi2uGVJsuRaplnutrxuhVo5WaVYVVpds0atna0l1rutu6cRp7lO
+k06rntZnw7Dxtsm2qbcZsOXYBtuutm22fWFnYhdnt8Wuw+6TvZN9un2N/T0HDYfZDqsdWh1+c7Ry
+FDpWOt6azpzuP33F9JbpL2dYzxDP2DPjthPLKcRpnVOb00dnF2e5c4PziIuJS4LLLpc+Lpsbxt3I
+veRKdPVxXeF60vWdm7Obwu2o26/uNu5p7ofcn8w0nymeWTNz0MPIQ+BR5dE/C5+VMGvfrH5PQ0+B
+Z7XnIy9jL5FXrdewt6V3qvdh7xc+9j5yn+M+4zw33jLeWV/MN8C3yLfLT8Nvnl+F30N/I/9k/3r/
+0QCngCUBZwOJgUGBWwL7+Hp8Ib+OPzrbZfay2e1BjKC5QRVBj4KtguXBrSFoyOyQrSH355jOkc5p
+DoVQfujW0Adh5mGLw34MJ4WHhVeGP45wiFga0TGXNXfR3ENz30T6RJZE3ptnMU85ry1KNSo+qi5q
+PNo3ujS6P8YuZlnM1VidWElsSxw5LiquNm5svt/87fOH4p3iC+N7F5gvyF1weaHOwvSFpxapLhIs
+OpZATIhOOJTwQRAqqBaMJfITdyWOCnnCHcJnIi/RNtGI2ENcKh5O8kgqTXqS7JG8NXkkxTOlLOW5
+hCepkLxMDUzdmzqeFpp2IG0yPTq9MYOSkZBxQqohTZO2Z+pn5mZ2y6xlhbL+xW6Lty8elQfJa7OQ
+rAVZLQq2QqboVFoo1yoHsmdlV2a/zYnKOZarnivN7cyzytuQN5zvn//tEsIS4ZK2pYZLVy0dWOa9
+rGo5sjxxedsK4xUFK4ZWBqw8uIq2Km3VT6vtV5eufr0mek1rgV7ByoLBtQFr6wtVCuWFfevc1+1d
+T1gvWd+1YfqGnRs+FYmKrhTbF5cVf9go3HjlG4dvyr+Z3JS0qavEuWTPZtJm6ebeLZ5bDpaql+aX
+Dm4N2dq0Dd9WtO319kXbL5fNKNu7g7ZDuaO/PLi8ZafJzs07P1SkVPRU+lQ27tLdtWHX+G7R7ht7
+vPY07NXbW7z3/T7JvttVAVVN1WbVZftJ+7P3P66Jqun4lvttXa1ObXHtxwPSA/0HIw6217nU1R3S
+PVRSj9Yr60cOxx++/p3vdy0NNg1VjZzG4iNwRHnk6fcJ3/ceDTradox7rOEH0x92HWcdL2pCmvKa
+RptTmvtbYlu6T8w+0dbq3nr8R9sfD5w0PFl5SvNUyWna6YLTk2fyz4ydlZ19fi753GDborZ752PO
+32oPb++6EHTh0kX/i+c7vDvOXPK4dPKy2+UTV7hXmq86X23qdOo8/pPTT8e7nLuarrlca7nuer21
+e2b36RueN87d9L158Rb/1tWeOT3dvfN6b/fF9/XfFt1+cif9zsu72Xcn7q28T7xf9EDtQdlD3YfV
+P1v+3Njv3H9qwHeg89HcR/cGhYPP/pH1jw9DBY+Zj8uGDYbrnjg+OTniP3L96fynQ89kzyaeF/6i
+/suuFxYvfvjV69fO0ZjRoZfyl5O/bXyl/erA6xmv28bCxh6+yXgzMV70VvvtwXfcdx3vo98PT+R8
+IH8o/2j5sfVT0Kf7kxmTk/8EA5jz/GMzLdsAAAAEZ0FNQQAAsY58+1GTAAAAIGNIUk0AAHolAACA
+gwAA+f8AAIDpAAB1MAAA6mAAADqYAAAXb5JfxUYAAAPMSURBVHja7Js9ayJBGMefDRtIIC8WCkII
+XLiAjd0dJK19moNr/Ag21+Rz2Nj4Ea45sLG3uULBdBYneElATAJamLigYDHX3Mg4zrM7O2+74A5I
+jO7L/H/zn2eeZzbxCCGwz+0A9rxlADIAGYAMwF4339aFPc8zsr4SQjybADyTeQArujcZKV/n5uLa
+GQhtAJhokYjeZCT8nG/1bnvz/v72zioM35boL58KW+c8PE/R72gLVusd0SIY9P4mQPgqwsfvMwAA
+eAnmoaLjtpOjQwhWaygVc0IH8DBMgPBVhF+e5zfflYo5ODk6FJ53lT8TOoD9/Gn2sQOBdUMUDF0Q
+vox4XjjbKRnxYY0ex4MQNREMFoTVPODyPA+lYs6o+LBzsGuzMErFnLJwK3mASHjh9DjW+awTaExI
+ZSYYNUKs+GZnsFkCa5UyFE6PUTBxnZAIAFGn+I7LjDwGwiUEKQAvwTyW9ePYXuV4vvVfH+0BIIR4
+NxfX0JuMYPg2tyaGP08mkA7f5lBtNeDntx/JVYNRHW12BqG/m4w5qSuHm50BjN9nmwSq3m1DvdtG
+Iai4IFXlMGZ/UQzBIHz/+jkyVTZZNvs2Rp0tlKj43+M/wpyeb3xio1tfGCmHaa5N13K2U1f5M/jV
+/wth1SEvuP/6iAYu/lgWCL1vsFrvBECnDmALm4fnKVoS1yrlHauzS1atUo50QLXV2LzXifZaAAgh
+XthuDy+abbVKeatwoSJE4kUxgBWNwbBeDkft6tBOY0GQdwImXtTY6YbBcLYK0IQIC07TxVI7q5OB
+QaegiSlhJA9gK7jpYql8HZlzTVeH0gD4eWa6I6rgdPcFYzsAqwt0XCB7vGj5S3QK8C5QgRBHvOnR
+jw2A3lC2OowSF/U9v09oevS1HEBT26hYIBI5XSxjibe5LXagGnTub++g3m3D8G2+1UHR7q7OyoCN
+vqmnQ1bKYZkt7jSMvjKAKBdgKS49ni2eZMTbGn0tB0R1QsUFus5JZAqEueBp9qEtyuboawMQdUZ1
+zvKgbK37VoIg64KoBCmO9W2s+8YBiAJiHAiiz03u+DhxANY5kY11HmKkFgA2FcJiAhYgXY6+UQDY
+VJANjMFq7Vy8cQeoQnCR8DhNhXVKapfi6Y2MvwCAAACpd9sEAEipmNu8AIBUW43Qz230Ce2rtQv/
+h0BFUcE8AP44l+KtAuAhsCCw967FWwfAQmDF8j+TEk8IMfu3wlhjnyqJnu44C3iugqCsE5IceacO
+EDkh8ZFPIg9gBadBPAC4dUAaW/Y/QxmADEAGIAOQAdjj9m8Anxr7rxH4e5YAAAAASUVORK5CYII=" transform="matrix(0.9466 0 0 0.7462 162.4458 11.7827)">
+	</image>
 </g>
 <g>
 	<text id='Defense_Text' x='160' y='80' font='sans-serif' font-size='25'>10</text>
@@ -1558,6 +1625,8 @@ oeaxhkcmh8kiU1hGtfYfNOdn6/Vy8DXq4bztWwa8Lz844D040u2FdFUUY76R9X6v+i3Op6AW8kv2
 	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="213.833" x2="74.723" y2="213.833"/>
 </g>
 <g id="Health_Icon">
+	<line fill="none" stroke="#EC1C24" stroke-width="11" stroke-miterlimit="10" x1="61.504" y1="128.726" x2="61.504" y2="177.716"/>
+	<line fill="none" stroke="#EC1C24" stroke-width="11" stroke-miterlimit="10" x1="37.01" y1="153.221" x2="86" y2="153.221"/>
 </g>
 <g>
 	<text id='Health_Text' x='40' y='210' font='sans-serif' font-size='25'>10</text>
@@ -1576,6 +1645,17 @@ oeaxhkcmh8kiU1hGtfYfNOdn6/Vy8DXq4bztWwa8Lz844D040u2FdFUUY76R9X6v+i3Op6AW8kv2
 </g>
 
 <!-- End Special Stuff -->
+
+<!-- Spawn Button -->
+<g id='Spawn_Button'>
+	<g id="Spawn_Background">
+	<path fill="#0D6813" d="M258.101,393.551c0,6.627-5.373,12-12,12H50.264c-6.627,0-12-5.373-12-12v-58.924c0-6.627,5.373-12,12-12
+		h195.837c6.627,0,12,5.373,12,12V393.551z"/>
+	</g>
+	<g id="Spawn_Text">
+		<text transform="matrix(1 0 0 1 97.8872 356.6616)"><tspan x="0" y="0" fill="#1FAA18" font-family="'MyriadPro-Regular'" font-size="30">SPAWN </tspan><tspan x="-12.27" y="36" fill="#1FAA18" font-family="'MyriadPro-Regular'" font-size="30">MONSTER</tspan></text>
+	</g>
+</g>
 </svg>
 
 
