added div tags for use by css

--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <head>
 	<title>MonsterArena</title>
 	<script src='MonsterArena.js'></script>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-
+	<div id='toplevel'>
+	<div id='spawner'>
 	<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 	 width="294.665px" height="594.667px" viewBox="0 0 294.665 594.667" enable-background="new 0 0 294.665 594.667"
 	 xml:space="preserve">
@@ -1657,8 +1659,17 @@ EDkh8ZFPIg9gBadBPAC4dUAaW/Y/QxmADEAGIAOQAdjj9m8Anxr7rxH4e5YAAAAASUVORK5CYII=" tr
 	</g>
 </g>
 </svg>
+</div>
 
-<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="300px" y="0px" width="299px"
+<div id='arena'>
+	<!-- 
+		@TODO
+		Put in arena stuff here
+	-->
+</div>
+
+<div id='shop'>
+<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="299px"
 	 height="595.5px" viewBox="0 0 299 595.5" enable-background="new 0 0 299 595.5" xml:space="preserve">
 <g id="Border_1_">
 	<g id="Border">
@@ -3365,7 +3376,8 @@ EDkh8ZFPIg9gBadBPAC4dUAaW/Y/QxmADEAGIAOQAdjj9m8Anxr7rxH4e5YAAAAASUVORK5CYII=" tr
 	<text transform="matrix(1 0 0 1 42.2129 466.0137)" fill="#23AA4A" font-family="'MyriadPro-Bold'" font-size="22.5966">PURCHASE UPGRADE</text>
 </g>
 </svg>
-
+</div>
+</div>
 <!-- Shop UI -->
 </body>
 </html>
