--- a/index.html
+++ b/index.html
@@ -1477,12 +1477,12 @@
 </g>
 <g id="Attack_Minus">
 	<rect x='74.723' y='80' width='15' height='10' fill-opacity='0'/>
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="84.794" x2="74.723" y2="84.794"/>
+	<line id='attackMinus1' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="84.794" x2="74.723" y2="84.794"/>
 </g>
 <g id="Attack_Plus">
 	<rect x='74.723' y='56' width='15' height='16' fill-opacity='0'/>
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="82.223" y1="56.757" x2="82.223" y2="72.757"/>
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="64.757" x2="74.723" y2="64.757"/>
+	<line id='attackPlus1' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="82.223" y1="56.757" x2="82.223" y2="72.757"/>
+	<line id='attackPlus2' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="64.757" x2="74.723" y2="64.757"/>
 </g>
 <g>
 	<text id='Attack_Text' x='40' y='80' font='sans-serif' font-size='25'>10</text>
@@ -1535,12 +1535,12 @@ oeaxhkcmh8kiU1hGtfYfNOdn6/Vy8DXq4bztWwa8Lz844D040u2FdFUUY76R9X6v+i3Op6AW8kv2
 <!-- Defense Stuff -->
 <g id="Defense_Plus">
 	<rect x='204' y='56' width='18' height='18' fill-opacity='0' /> 
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="212.292" y1="56.757" x2="212.292" y2="72.757"/>
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="219.792" y1="64.757" x2="204.792" y2="64.757"/>
+	<line id='defensePlus1' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="212.292" y1="56.757" x2="212.292" y2="72.757"/>
+	<line id='defensePlus2' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="219.792" y1="64.757" x2="204.792" y2="64.757"/>
 </g>
 <g id="Defense_Minus">
 	<rect x='204' y='80' width='16' height='10' fill-opacity='0'/>
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="219.792" y1="84.794" x2="204.792" y2="84.794"/>
+	<line id='defenseMinus1' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="219.792" y1="84.794" x2="204.792" y2="84.794"/>
 </g>
 <g id="Defense_Icon">
 	<image overflow="visible" enable-background="new    " width="64" height="64" xlink:href="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEAAAABACAYAAACqaXHeAAAACXBIWXMAAA7DAAAOwwHHb6hkAAAK
@@ -1619,12 +1619,12 @@ EDkh8ZFPIg9gBadBPAC4dUAaW/Y/QxmADEAGIAOQAdjj9m8Anxr7rxH4e5YAAAAASUVORK5CYII=" tr
 <!-- Health Stuff -->
 <g id="Health_Plus">
 	<rect x='72' y='184' width='20' height='20' fill-opacity='0' /> 
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="82.223" y1="186.167" x2="82.223" y2="202.167"/>
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="194.167" x2="74.723" y2="194.167"/>
+	<line id='healthPlus1' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="82.223" y1="186.167" x2="82.223" y2="202.167"/>
+	<line id='healthPlus2' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="194.167" x2="74.723" y2="194.167"/>
 </g>
 <g id="Health_Minus">
 	<rect x='74.723' y='210' width='15' height='10' fill-opacity='0'/>
-	<line fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="213.833" x2="74.723" y2="213.833"/>
+	<line id='healthMinus1' fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" x1="89.723" y1="213.833" x2="74.723" y2="213.833"/>
 </g>
 <g id="Health_Icon">
 	<line fill="none" stroke="#EC1C24" stroke-width="11" stroke-miterlimit="10" x1="61.504" y1="128.726" x2="61.504" y2="177.716"/>
