added jquery CDN

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<!script src = "MonsterArena.js"><!/script>
 	<script src ="MonsterArena.js"></script>
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 	<link href="index.css" rel="stylesheet">
 		<title>"Monster Arena!"</title>	
 	<body>
