modified index to support main.css selectors

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<script src ="MonsterArena.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-	<link href="index.css" rel="stylesheet">
+	<link href="main.css" rel="stylesheet">
 		<title>"Monster Arena!"</title>	
 	<body>
-			<div class="flex-container flex" >
-				<div id ="left-side-screen" class = "flex">
+			<div id="toplevel" >
+				<div id ="spawner">
 					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 		 width="294.665px" height="594.667px" viewBox="0 0 294.665 594.667" enable-background="new 0 0 294.665 594.667"
 		 xml:space="preserve">
@@ -1665,12 +1665,9 @@
 	</g>
 	</svg>
 				</div>
-				<div id="stage" class="flex" >
-					<svg id="svgArea" style = "outline: 5px solid black"  class="row"  >							
-
-					</svg>
-				</div>
-				<div id ="right-side-screen" class = "flex">
+					<div id="arena" >
+					</div>
+				<div id="shop">
 					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="299px"
 	 height="595.5px" viewBox="0 0 299 595.5" enable-background="new 0 0 299 595.5" xml:space="preserve">
 <g id="Border_1_">
