added grey-out rectangles

--- a/index.html
+++ b/index.html
@@ -3154,6 +3154,9 @@
 	<g id="DoorPlus_Border">
 		<rect x="52" y="70.5" fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" width="58" height="55"/>
 	</g>
+	<g>
+		<rect id='Door_Grey' opacity='0.75' x="52" y="70.5" fill="#666262" width="58" height="55"/>
+	</g>
 	<g id="DoorPlus_Icon">
 		<g>
 			<path fill="#592F24" d="M74.317,74.528v2.115h-8.274v42.211h3.06V79.703h5.215V122.5l20.276-3.646v-5.967V78.18L74.317,74.528z
@@ -3225,6 +3228,9 @@ oeaxhkcmh8kiU1hGtfYfNOdn6/Vy8DXq4bztWwa8Lz844D040u2FdFUUY76R9X6v+i3Op6AW8kv2
 			<line fill="none" stroke="#36793B" stroke-width="5" stroke-miterlimit="10" x1="188.525" y1="110.238" x2="210" y2="110.238"/>
 		</g>
 	</g>
+	<g>
+		<rect id='Attack_Grey' x="185.771" y="70.5" opacity="0.75" fill="#666262" width="58" height="55"/>
+	</g>
 	<g id="AttackCap_Border">
 		<rect x="185" y="70.5" fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" width="58" height="55"/>
 	</g>
@@ -3264,6 +3270,9 @@ oeaxhkcmh8kiU1hGtfYfNOdn6/Vy8DXq4bztWwa8Lz844D040u2FdFUUY76R9X6v+i3Op6AW8kv2
 	</g>
 	<g id="HealthCap_Border">
 		<rect x="52" y="182.5" fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" width="58" height="55"/>
+	</g>
+	<g>
+		<rect id="Health_Grey" x="52" y="182.38" opacity="0.75" fill="#666262" width="58" height="55"/>
 	</g>
 	<g>
 		<rect id="Health_Selected" x="46" y="174.5" fill="none" stroke-opacity='0' stroke="#CE2D2E" stroke-width="4" stroke-miterlimit="10" width="71" height="71"/>
@@ -3334,6 +3343,9 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 		<rect x="185" y="182.5" fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" width="58" height="55"/>
 	</g>
 	<g>
+		<rect id="Defense_Grey" opacity='0.75' x="185.5" y="182.5" fill="#666262" width="58" height="55"/>
+	</g>
+	<g>
 		<rect id="Defense_Selected" x="179" y="174.5" fill="none" stroke-opacity='0' stroke="#CE2D2E" stroke-width="4" stroke-miterlimit="10" width="71" height="71"/>
 	</g>
 	<g>
@@ -3347,6 +3359,9 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 		<rect x="52" y="294.5" fill-opacity='0' width="58" height="55"/>
 	</g>
 	<g>
+		<rect id="Other1_Grey" opacity='0.75' x="52.5" y="294.5" fill="#666262" width="58" height="55"/>
+	</g>
+	<g>
 		<rect id="Other1_Selected" x="46" y="286.5" fill="none" stroke-opacity='0' stroke="#CE2D2E" stroke-width="4" stroke-miterlimit="10" width="71" height="71"/>
 	</g>
 	<g id="Other1_Border">
@@ -3358,6 +3373,9 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 </g>
 <g id="Other2">
 	<g id="Other2_Icon">
+	</g>
+	<g>
+		<rect id="Other2_Grey" opacity='0.75' x="185" y="294.5" fill="#666262" width="58" height="55"/>
 	</g>
 	<g>
 		<rect id="Other2_Selected" x="179" y="286.5" fill="none" stroke-opacity='0' stroke="#CE2D2E" stroke-width="4" stroke-miterlimit="10" width="71" height="71"/>
