ability to grey out purchase button

--- a/index.html
+++ b/index.html
@@ -3398,6 +3398,8 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 	<path fill="#1B8A43" d="M267,468.5c0,6.627-5.466,12-12.208,12H44.207c-6.741,0-12.207-5.373-12.207-12v-20
 		c0-6.627,5.466-12,12.207-12h210.585c6.742,0,12.208,5.373,12.208,12V468.5z"/>
 	<text transform="matrix(1 0 0 1 42.2129 466.0137)" fill="#23AA4A" font-family="'MyriadPro-Bold'" font-size="22.5966">PURCHASE UPGRADE</text>
+	<path id='Purchase_Grey' fill="#666262" opacity='0.65' d="M267,468.5c0,6.627-5.466,12-12.208,12H44.207c-6.741,0-12.207-5.373-12.207-12v-20
+		c0-6.627,5.466-12,12.207-12h210.585c6.742,0,12.208,5.373,12.208,12V468.5z"/>
 </g>
 </svg>
 				</div>
