--- a/index.html
+++ b/index.html
@@ -1669,7 +1669,7 @@
 </svg>
 				</div>
 					<div id="arena" >
-						<svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="590px" height="340px" viewBox="0 0 590 340" enable-background="new 0 0 590 340"xml:space="preserve">
+						<svg version="1.1" id="svgArea" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="590px" height="340px" viewBox="0 0 590 340" enable-background="new 0 0 590 340"xml:space="preserve">
 							<image overflow="visible" width="1571" height="909" xlink:href="./img/arena3.png"  transform="matrix(0.3756 0 0 0.374 0 0)">
 						</image>
 						</svg>
