updated for specials

--- a/index.html
+++ b/index.html
@@ -1651,6 +1651,12 @@
 		<polygon fill="#231F20" points="220.765,263.269 213.271,278.239 205.818,263.248 	"/>
 	</g>
 	<g id="Special_Icon">
+		<image id='critical_special' x='155' y='238' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
+
+		<image id='magic_special' x='155' y='238' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+
+		<image id='taunt_special' x='155' y='238' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/taunt.png" />
+
 	</g>
 
 	<!-- End Special Stuff -->
