added icons for purchasing/attaching specials

--- a/index.html
+++ b/index.html
@@ -1644,20 +1644,27 @@
 	<!-- End Health Stuff -->
 
 	<!-- Special Stuff -->
+	<g id="Special_Icon">
+		<image x='145' y='210' overflow="visible" width="90" height="26" xlink:href="./img/icons/red_specials.png" />
+	</g>
 	<g id="Special_Up">
 		<polygon fill="#231F20" points="205.819,258.567 213.292,243.586 220.766,258.567 	"/>
 	</g>
 	<g id="Special_Down">
 		<polygon fill="#231F20" points="220.765,263.269 213.271,278.239 205.818,263.248 	"/>
 	</g>
-	<g id="Special_Icon">
-		<image id='critical_special' x='155' y='238' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
+	<g>
+		<image id='none_special' desc='No special' x='155' y='238' overflow="visible" opacity='1' width="40" height="40" xlink:href="./img/icons/none.svg" />
 
-		<image id='magic_special' x='155' y='238' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+		<image id='critical_special' desc='Chance to double damage' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
 
-		<image id='taunt_special' x='155' y='238' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/taunt.png" />
+		<image id='magic_special' desc='Ignores defense' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+
+		<image id='taunt_special' desc='Hero attack this first' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/taunt.png" />
 
 	</g>
+
+	<text x='150' y='355' id='Special_Desc' text-anchor='middle' font-size='17'></text>
 
 	<!-- End Special Stuff -->
 
@@ -3363,23 +3370,30 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 		<text id='Defense_Cost' x='214.5' y='267' font-size='16' text-anchor='middle'>500</text>
 	</g>
 </g>
-<g id="Other1">
-	<g id="Other1_Icon">
+<g id="Special">
+	<g id="Special_Icon">
+
+		<image id='critical_special' desc='Chance to double damage' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
+
+		<image id='magic_special' desc='Ignores defense' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+
+		<image id='taunt_special' desc='Hero attacks this first' x='57' y='300' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/taunt.png" />
+
 	</g>
-	<g id="Other1_Transparent">
+	<g id="Special_Transparent">
 		<rect x="52" y="294.5" fill-opacity='0' width="58" height="55"/>
 	</g>
 	<g>
-		<rect id="Other1_Grey" opacity='0.75' x="52.5" y="294.5" fill="#666262" width="58" height="55"/>
+		<rect id="Special_Grey" opacity='0.75' x="52.5" y="294.5" fill="#666262" width="58" height="55"/>
 	</g>
 	<g>
-		<rect id="Other1_Selected" x="46" y="286.5" fill="none" stroke-opacity='0' stroke="#CE2D2E" stroke-width="4" stroke-miterlimit="10" width="71" height="71"/>
+		<rect id="Special_Selected" x="46" y="286.5" fill="none" stroke-opacity='0' stroke="#CE2D2E" stroke-width="4" stroke-miterlimit="10" width="71" height="71"/>
 	</g>
-	<g id="Other1_Border">
+	<g id="Special_Border">
 		<rect x="52" y="294.5" fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" width="58" height="55"/>
 	</g>
 	<g>
-		<text id='Other1_Cost' x='81.5' y='379' font-size='16' text-anchor='middle'>500</text>
+		<text id='Special_Cost' x='81.5' y='379' font-size='16' text-anchor='middle'>500</text>
 	</g>
 </g>
 <g id="Other2">
