--- a/index.html
+++ b/index.html
@@ -1654,13 +1654,15 @@
 		<polygon fill="#231F20" points="220.765,263.269 213.271,278.239 205.818,263.248 	"/>
 	</g>
 	<g>
-		<image id='none_special' desc='No special' x='155' y='238' overflow="visible" opacity='1' width="40" height="40" xlink:href="./img/icons/none.svg" />
+		<image id='stats_none_special' desc='No special' x='155' y='238' overflow="visible" opacity='1' width="40" height="40" xlink:href="./img/icons/none.svg" />
 
-		<image id='critical_special' desc='Chance to double damage' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
+		<image id='stats_defense_special' desc='Chance to ignore damage' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticaldefense.png" />
 
-		<image id='magic_special' desc='Ignores defense' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+		<image id='stats_critical_special' desc='Chance to double damage' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
 
-		<image id='taunt_special' desc='Hero attack this first' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/taunt.png" />
+		<image id='stats_magic_special' desc='Ignores hero defense' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+
+		<image id='stats_taunt_special' desc='Hero attacks this monster first' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/taunt.png" />
 
 	</g>
 
@@ -3373,11 +3375,15 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 <g id="Special">
 	<g id="Special_Icon">
 
-		<image id='critical_special' desc='Chance to double damage' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
+		<image id='shop_defense_special' desc='Chance to ignore damage' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticaldefense.png" />
 
-		<image id='magic_special' desc='Ignores defense' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+		<image id='shop_critical_special' desc='Chance to double damage' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
 
-		<image id='taunt_special' desc='Hero attacks this first' x='57' y='300' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/taunt.png" />
+		<image id='shop_magic_special' desc='Ignores player defense' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+
+		<image id='shop_taunt_special' desc='Hero attacks this first' x='57' y='300' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/taunt.png" />
+
+		<image id='shop_none_special' desc='No more specials' x='57' y='300' overflow="visible" opacity='0' width="40" height="40" xlink:href="./img/icons/none.svg" />
 
 	</g>
 	<g id="Special_Transparent">
