added boss upgrade icons and renamed Other2

--- a/index.html
+++ b/index.html
@@ -3402,23 +3402,26 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 		<text id='Special_Cost' x='81.5' y='379' font-size='16' text-anchor='middle'>500</text>
 	</g>
 </g>
-<g id="Other2">
-	<g id="Other2_Icon">
+<g id="Boss">
+	<g id="Boss_Icon">
+		<image id='shop_leader' desc='Upgrades leader stats' x='190' y='295' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/leader.png" />
+
+		<image id='shop_leader_none' desc='No more leader upgrades' x='195' y='300' overflow="visible" opacity='0' width="40" height="40" xlink:href="./img/icons/none.svg" />
 	</g>
 	<g>
-		<rect id="Other2_Grey" opacity='0.75' x="185" y="294.5" fill="#666262" width="58" height="55"/>
+		<rect id="Boss_Grey" opacity='0.75' x="185" y="294.5" fill="#666262" width="58" height="55"/>
 	</g>
 	<g>
-		<rect id="Other2_Selected" x="179" y="286.5" fill="none" stroke-opacity='0' stroke="#CE2D2E" stroke-width="4" stroke-miterlimit="10" width="71" height="71"/>
+		<rect id="Boss_Selected" x="179" y="286.5" fill="none" stroke-opacity='0' stroke="#CE2D2E" stroke-width="4" stroke-miterlimit="10" width="71" height="71"/>
 	</g>
-	<g id="Other2_Transparent">
+	<g id="Boss_Transparent">
 		<rect x="185" y="294.5" fill-opacity='0' width="58" height="55"/>
 	</g>
-	<g id="Other2_Border">
+	<g id="Boss_Border">
 		<rect x="185" y="294.5" fill="none" stroke="#000000" stroke-width="3" stroke-miterlimit="10" width="58" height="55"/>
 	</g>
 	<g>
-		<text id='Other2_Cost' x='214.5' y='379' font-size='16' text-anchor='middle'>500</text>
+		<text id='Boss_Cost' x='214.5' y='379' font-size='16' text-anchor='middle'>500</text>
 	</g>
 </g>
 <g>
