changed magic special to heal special

--- a/index.html
+++ b/index.html
@@ -1663,7 +1663,7 @@
 
 		<image id='stats_critical_special' desc='Chance to double damage' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
 
-		<image id='stats_magic_special' desc='Ignores hero defense' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+		<image id='stats_heal_special' desc='Ignores hero defense' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/heal.png" />
 
 		<image id='stats_taunt_special' desc='Hero attacks this monster first' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/taunt.png" />
 
@@ -3384,7 +3384,7 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 
 		<image id='shop_critical_special' desc='Chance to double damage' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
 
-		<image id='shop_magic_special' desc='Ignores player defense' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/magicattack.png" />
+		<image id='shop_heal_special' desc='Ignores player defense' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/heal.png" />
 
 		<image id='shop_taunt_special' desc='Hero attacks this first' x='57' y='300' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/taunt.png" />
 
