redid special icons

--- a/index.html
+++ b/index.html
@@ -1659,11 +1659,11 @@
 	<g>
 		<image id='stats_none_special' desc='No special' x='155' y='238' overflow="visible" opacity='1' width="40" height="40" xlink:href="./img/icons/none.svg" />
 
-		<image id='stats_defense_special' desc='Chance to ignore damage' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticaldefense.png" />
+		<image id='stats_dodge_special' desc='Chance to dodge hero attack' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/speedbuff.png" />
 
 		<image id='stats_critical_special' desc='Chance to double damage' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
 
-		<image id='stats_heal_special' desc='Ignores hero defense' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/heal.png" />
+		<image id='stats_heal_special' desc='Heals allies' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/heal.png" />
 
 		<image id='stats_taunt_special' desc='Hero attacks this monster first' x='155' y='238' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/taunt.png" />
 
@@ -3380,11 +3380,11 @@ op+BIqRjIz2EVC/18fWUpSxlKUtZylKWvkj6nwADAE773NxT7bl3AAAAAElFTkSuQmCC" transform=
 <g id="Special">
 	<g id="Special_Icon">
 
-		<image id='shop_defense_special' desc='Chance to ignore damage' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticaldefense.png" />
+		<image id='shop_dodge_special' desc='Chance to dodge hero attack' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/speedbuff.png" />
 
 		<image id='shop_critical_special' desc='Chance to double damage' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/criticalattack.png" />
 
-		<image id='shop_heal_special' desc='Ignores player defense' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/heal.png" />
+		<image id='shop_heal_special' desc='Heals allies' x='57' y='300' overflow="visible" opacity='0' width="48" height="48" xlink:href="./img/icons/heal.png" />
 
 		<image id='shop_taunt_special' desc='Hero attacks this first' x='57' y='300' overflow="visible" opacity='1' width="48" height="48" xlink:href="./img/icons/taunt.png" />
 
