--- a/index.html
+++ b/index.html
@@ -24,78 +24,79 @@
 				<div id="splash-screen" class="splash">
 				</div>
 				<div id="game_over" class="menu">
-		<div id="container">
-			<h1>GAME OVER</h1>
-			<p>You have defeated the hero!</p>
-			<a id="GO_credits_btn" href="#">Credits</a>
-		</div>
-	</div>
-	<div id="credits" class="menu">
-		<div id="c_box">
-			<h1>CREDITS</h1>
-		</div>
-		<div class="container">
-			<div class="col-md-6">
-				<h3>Contributors</h3>
-				<ul id="cont_list">
-					<li>Kyle Brown</li> 
-					<li>Christian Hughes</li> 
-					<li>Nic Johnson</li> 
-					<li>Richard Petrie</li> 
-					<li>David Barnes III</li> 
-					<li>E.N. Speer</li>
-				</ul>
-			</div>
-			<div class="col-md-6">
-				<h3>Attribution</h3>
-				<ul>
-				<div>
-					<li>
-						Heart and Door icons (modified) made by
-						<a href="http://www.freepik.com" title="Freepik">Freepik</a> from
-						<a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
-						and is covered by a <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0 License</a>.
-					</li>
+				<div id="container">
+					<h1>GAME OVER</h1>
+					<p>You have defeated the hero!</p>
+					<a id="GO_credits_btn" href="#">Credits</a>
 				</div>
+			</div>
+			<div id="credits" class="menu">
+				<div id="c_box">
+					<h1>CREDITS</h1>
+				</div>
+				<div class="container">
+					<div class="col-md-6">
+						<h3>Contributors</h3>
+						<ul id="cont_list">
+							<li>Kyle Brown</li> 
+							<li>Christian Hughes</li> 
+							<li>Nic Johnson</li> 
+							<li>Richard Petrie</li> 
+							<li>David Barnes III</li> 
+							<li>E.N. Speer</li>
+						</ul>
+					</div>
+					<div class="col-md-6">
+						<h3>Attribution</h3>
+						<ul>
+						<div>
+							<li>
+								Heart and Door icons (modified) made by
+								<a href="http://www.freepik.com" title="Freepik">Freepik</a> from
+								<a href="http://www.flaticon.com" title="Flaticon">www.flaticon.com</a>
+								and is covered by a <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0 License</a>.
+							</li>
+						</div>
 
-				<div>
-					<li>
-						All sprite sheets were sourced from <a href="http://opengameart.org" title="OpenGameArt">opengameart.org</a>, and created by user
-						<a href="http://opengameart.org/users/dogchicken" title="dogchicken">dogchicken</a>. They are covered by a
-						<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0 License</a>.
-					</li>
-					<ul>
-					<li>
-						The Creepo Sprite Sheet can be found <a href="http://opengameart.org/content/cute-monster-sprite-sheet" title="Creepo">here</a>.
-					</li>
-					<li>
-						The Skully Sprite Sheet can be found <a href="http://opengameart.org/content/skull-monster-sprite-sheet" title="Skully">here</a>.
-					</li>
-					<li>
-						The Gunner Sprite Sheet can be found <a href="http://opengameart.org/content/cat-fighter-addon2-assault-rifle-kit" title="Gunner">here</a>.
-					</li>
-					<li>
-						The Snappy Sprite Sheet can be found <a href="http://opengameart.org/content/demon-flower-monster-sprite-sheet" title="Snappy">here</a>.
-					</li>
-					<li>
-						The Wingy Sprite Sheet can be found <a href="http://opengameart.org/content/flying-tongue-monster-sprite-sheet" title="Wingy">here</a>.
-					</li>
-					<li>
-						The Puncher Sprite Sheet can be found <a href="http://opengameart.org/content/cat-fighter-sprite-sheet" title="Puncher">here</a>.
-					</li>
-					<li>
-						All Boss Sprites are public domain.
-					</li>
-					</ul>
+						<div>
+							<li>
+								All sprite sheets were sourced from <a href="http://opengameart.org" title="OpenGameArt">opengameart.org</a>, and created by user
+								<a href="http://opengameart.org/users/dogchicken" title="dogchicken">dogchicken</a>. They are covered by a
+								<a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0 License</a>.
+							</li>
+							<ul>
+							<li>
+								The Creepo Sprite Sheet can be found <a href="http://opengameart.org/content/cute-monster-sprite-sheet" title="Creepo">here</a>.
+							</li>
+							<li>
+								The Skully Sprite Sheet can be found <a href="http://opengameart.org/content/skull-monster-sprite-sheet" title="Skully">here</a>.
+							</li>
+							<li>
+								The Gunner Sprite Sheet can be found <a href="http://opengameart.org/content/cat-fighter-addon2-assault-rifle-kit" title="Gunner">here</a>.
+							</li>
+							<li>
+								The Snappy Sprite Sheet can be found <a href="http://opengameart.org/content/demon-flower-monster-sprite-sheet" title="Snappy">here</a>.
+							</li>
+							<li>
+								The Wingy Sprite Sheet can be found <a href="http://opengameart.org/content/flying-tongue-monster-sprite-sheet" title="Wingy">here</a>.
+							</li>
+							<li>
+								The Puncher Sprite Sheet can be found <a href="http://opengameart.org/content/cat-fighter-sprite-sheet" title="Puncher">here</a>.
+							</li>
+							<li>
+								All Boss Sprites are public domain.
+							</li>
+							</ul>
+						</div>
+						<div>
+							<li><a href="http://all-free-download.com/free-vector/download/cool_tribal_borders_40655.html AUTHOR: http://www.vectorvaco.com/">Border Graphics</a><br></li>
+							<li><a href="http://opengameart.org/content/medieval-sword">Sword Icon</a> by Lexatchison</li>
+						</div>
+						</ul>
+					</div>
+					<a id="cred_go_back" href="#">Go Back</a>
 				</div>
-				<div>
-					<li><a href="http://all-free-download.com/free-vector/download/cool_tribal_borders_40655.html AUTHOR: http://www.vectorvaco.com/">Border Graphics</a><br></li>
-					<li><a href="http://opengameart.org/content/medieval-sword">Sword Icon</a> by Lexatchison</li>
 				</div>
-				</ul>
-			</div>
-		</div>
-	</div>
 				<div id ="spawner">
 					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
 						width="294.665px" height="594.667px" viewBox="0 0 294.665 594.667" enable-background="new 0 0 294.665 594.667"
