--- a/index.html
+++ b/index.html
@@ -1764,11 +1764,14 @@
 </svg>
 				</div>
 				<div id="arena" >
-						<caption>Hero Health: </caption>
-						<progress id="health" value="90" max="100" background="#0063a6">
+						<div id='info_div'>
+							<div id="health_div">
+								<caption>Hero Health: </caption>
+								<progress id="health" value="90" max="100" background="#0063a6">
 
-						</progress>
-						
+								</progress>
+							</div>
+						</div>
 						<!--
 						<!svg version="1.1" id="svgArea" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="590px" height="340px" viewBox="0 0 590 340" enable-background="new 0 0 590 340"xml:space="preserve">
 							<!image overflow="visible" width="1571" height="909" xlink:href="./img/arena3.png"  transform="matrix(0.3756 0 0 0.374 0 0)">
@@ -1777,6 +1780,9 @@
 						-->
 						<canvas id="monsters" xml:space = "preserve" style="border:1px solid #000000;">
 						</canvas>
+						<div id="available_doors_div">	
+								<p id="available_doors">Purchased Doors: 0</p>
+						</div>
 					</div>
 				<div id="shop">
 					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="299px"
