spacing for top captions

--- a/index.html
+++ b/index.html
@@ -1766,7 +1766,7 @@
 				</div>
 				<div id="arena" >
 						<caption id = "level">Hero Level: 1</caption>
-
+						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
 						<caption>Hero Health: </caption>
 						<progress id="health" value="90" max="100" background="#0063a6">
 
