Fixed all health bar issues, level up runs smoother

--- a/index.html
+++ b/index.html
@@ -1765,8 +1765,8 @@
 </svg>
 				</div>
 				<div id="arena" >
-						<caption id = "level">Hero Level: 1</caption>
-						&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; 
+						<div id = "level">Hero Level: 1</div>
+ 
 						<caption>Hero Health: </caption>
 						<progress id="health" value="90" max="100" background="#0063a6">
 
