Added the help screen.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,12 @@
 			<div id="toplevel" >
 				<div id="splash-screen" class="splash">
 				</div>
+				<div id="help-arena" class="help_arena">
+				</div>
+				<div id="help-stats" class="help_stats">
+				</div>
+				<div id="help-shop" class="help_shop">
+				</div>
 				<div id="game_over" class="menu">
 				<div id="container">
 					<h1>GAME OVER</h1>
