Fixed credit css.

--- a/index.html
+++ b/index.html
@@ -50,13 +50,14 @@
 							<li>Richard Petrie</li>
 							<li>David Barnes III</li>
 							<li>E.N. Speer</li>
+							<li>Nate Kellog</li>
 							<li>Diggy Hole Development Team!</li>
 						</ul>
 					</div>
 					<div class="col-md-6">
 						<h3>Attribution</h3>
 						<ul>
-						<div>
+						<div class="left_align">
 							<li>
 								Heart and Door icons (modified) made by
 								<a href="http://www.freepik.com" title="Freepik">Freepik</a> from
@@ -65,7 +66,7 @@
 							</li>
 						</div>
 
-						<div>
+						<div class = "left_align">
 							<li>
 								All sprite sheets were sourced from <a href="http://opengameart.org" title="OpenGameArt">opengameart.org</a>, and created by user
 								<a href="http://opengameart.org/users/dogchicken" title="dogchicken">dogchicken</a>. They are covered by a
@@ -95,7 +96,7 @@
 							</li>
 							</ul>
 						</div>
-						<div>
+						<div class="left_align>
 							<li><a href="http://all-free-download.com/free-vector/download/cool_tribal_borders_40655.html AUTHOR: http://www.vectorvaco.com/">Border Graphics</a><br></li>
 							<li><a href="http://opengameart.org/content/medieval-sword">Sword Icon</a> by Lexatchison</li>
 						</div>
