--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
 					<div class="col-md-6">
 						<h3>Contributors</h3>
 						<ul id="cont_list">
+							<li>David Barnes III</li>
 							<li>Kyle Brown</li>
 							<li>Christian Hughes</li>
 							<li>Nic Johnson</li>
-							<li>Richard Petrie</li>
-							<li>David Barnes III</li>
-							<li>E.N. Speer</li>
 							<li>Nate Kellog</li>
+							<li>Richard Petrie</li>
+							<li>E.N. Speer</li>
 							<li>Diggy Hole Development Team!</li>
 						</ul>
 					</div>
@@ -96,9 +96,14 @@
 							</li>
 							</ul>
 						</div>
-						<div class="left_align>
-							<li><a href="http://all-free-download.com/free-vector/download/cool_tribal_borders_40655.html AUTHOR: http://www.vectorvaco.com/">Border Graphics</a><br></li>
+						<div class="left_align">
+							<li><a href="http://all-free-download.com/free-vector/download/cool_tribal_borders_40655.html"> Border </a> by <a href="http://vectorvaco.com">VectorVaco.com</a></li>
 							<li><a href="http://opengameart.org/content/medieval-sword">Sword Icon</a> by Lexatchison</li>
+						</div>
+						<div class="left_align">
+							<li>
+								Audio by Kyle Brown
+							</li>
 						</div>
 						</ul>
 					</div>
